Updated for Django 1.11+, added import_dbstorage command

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 django-db-storage is written and maintained by Derek Kwok.
 
 - Derek Kwok <derek.kai.chun.kwok@gmail.com>
+- Dan Watson <dcwatson@gmail.com>
